# nexus

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  nexus.example.toml
.config/: nextest.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/team/: learnings.md  manual-testing.md  rfc-001.md  spec-kit-guide.md  v0.3-rfc-compliance.md
.github/workflows/: ci.yml  coverage.yml  docker.yml  release.yml
.specify/: EXAMPLE-CHECKLIST-USAGE.md  INDEX.md  QUICK-REFERENCE.md  README-CHECKLISTS.md
.specify/checklists/: requirements-quality.md
.specify/memory/: constitution.md  issue-patterns.md
.specify/templates/: implementation-verification.md
benches/: cli_startup.rs  config_parsing.rs  metrics.rs  routing.rs
dashboard/: dashboard.js  index.html  styles.css
docs/: ARCHITECTURE.md  FEATURES.md  LEARNINGS.md  MANUAL_TESTING_GUIDE.md  PROJECT_OVERVIEW.md  RFC-001.md  SPEC_KIT_PROMPTS.md  WEBSOCKET_PROTOCOL.md  architecture.md  faq.md  getting-started.md  roadmap.md  troubleshooting.md  v0.3-audit-report.md  v0.3-rfc-compliance.md
docs/api/: lifecycle.md  rest.md  websocket.md
scripts/: e2e-test.sh
specs/: README.md
specs/001-backend-registry/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/002-health-checker/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/003-cli-configuration/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/004-api-gateway/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/005-mdns-discovery/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/006-intelligent-router/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/007-model-aliases/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/008-fallback-chains/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/009-request-metrics/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/010-web-dashboard/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/011-structured-logging/: data-model.md  plan.md  quickstart.md  requirements-validation.md  research.md  spec.md  tasks.md  verification.md  walkthrough.md
specs/012-nii-extraction/: data-model.md  plan.md  quickstart.md  research.md  (+5 more)
src/: lib.rs  main.rs
tests/: actionable_errors_integration.rs  actionable_errors_unit.rs  actionable_rejection_test.rs  agent_integration.rs  api_contract.rs  api_edge_cases.rs  api_integration.rs  api_streaming.rs  backward_compat_test.rs  cli_integration.rs  cloud_backends_test.rs  cloud_cost_header_test.rs  dashboard_contract.rs  dashboard_integration.rs  discovery_integration.rs  embeddings_test.rs  fallback_header_integration.rs  health_integration.rs  lifecycle_api_test.rs  metrics_integration.rs  ollama_lifecycle_test.rs  openai_compatibility_contract.rs  openai_token_counting_test.rs  pricing_test.rs  privacy_enforcement_test.rs  privacy_zone_config_test.rs  queue_test.rs  reconciler_pipeline_test.rs  resource_usage_test.rs  routing_integration.rs  structured_logging.rs  tier_enforcement_test.rs  transparent_protocol_test.rs
(+282 files in other folders)
