[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
description = "Distributed LLM model serving orchestrator - unified API gateway for heterogeneous inference backends"
license = "Apache-2.0"
repository = "https://github.com/leocamello/nexus"
readme = "README.md"
keywords = ["llm", "ai", "orchestrator", "openai", "ollama"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async utilities
async-stream = "0.3"
futures = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# mDNS discovery
mdns-sd = "0.11"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
proptest = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
