[package]
name = "nexus-orchestrator"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Distributed LLM model serving orchestrator - unified API gateway for heterogeneous inference backends"
authors = ["Leonardo Nascimento <leocamello@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/leocamello/nexus"
homepage = "https://github.com/leocamello/nexus"
documentation = "https://docs.rs/nexus-orchestrator"
readme = "README.md"
keywords = ["llm", "ai", "orchestrator", "openai", "ollama"]
categories = ["command-line-utilities", "web-programming"]
exclude = [
    ".github/",
    ".specify/",
    ".config/",
    "benches/",
    "docs/",
    "specs/",
    "tests/",
    "target/",
    "*.md",
    "!README.md",
]

[lib]
name = "nexus"
path = "src/lib.rs"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "timeout", "limit"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async utilities
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Configuration
config = { version = "0.14", default-features = false, features = ["toml"] }

# Output formatting
comfy-table = "7"
colored = "2"

# mDNS discovery
mdns-sd = "0.11"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Dashboard
rust-embed = { version = "8.5", features = ["debug-embed"] }
mime_guess = "2.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cli_startup"
harness = false

[[bench]]
name = "config_parsing"
harness = false

[[bench]]
name = "metrics"
harness = false

[[bench]]
name = "routing"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
